Fix push notification api path